--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "c-img",
-  "version": "1.0.0",
+  "name": "cimg",
+  "version": "0.0.1",
   "description": "",
   "main": "run.js",
   "bin": {
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "git repository": "://github.com/win7killer/cimg",
   "author": "win7killer@163.com",
   "license": "ISC",
   "dependencies": {
